--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@ body{
   justify-content : space-between;
   border-radius : 15px;
 }
+.settingsContainer{
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
+.sideBySide{
+  display: flex;
+}
+.settingsContainer{
+  display: none;
+}
 #cookiesDialog{
   width : 400px;
 height : 200px;
